--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ script:
   - llvm-profdata-6.0  merge -o test.profdata default.profraw
   - llvm-cov-6.0 report ./iDom_TESTs-CMAKE -instr-profile=test.profdata -use-color
   - llvm-cov-6.0 show ./iDom_TESTs-CMAKE -instr-profile=test.profdata  -path-equivalence -use-color --format html > coverage.html
-  - curl https://bashupload.com/name.txt --data-binary @coverage.html  > log.log
+  - curl https://bashupload.com/iDom_coverage.html --data-binary @coverage.html  > log.log
   - export urlC=`cat log.log`
   - echo "adres"
   - echo $urlC
