--- a/iDom_server_OOP/cmake/iDom_server-CMAKE/.gitignore
+++ b/iDom_server_OOP/cmake/iDom_server-CMAKE/.gitignore
@@ -15,6 +15,7 @@
 *_pch.h.cpp
 *_resource.rc
 *.qm
+*.cmake
 .#*
 *.*#
 core
@@ -70,4 +71,5 @@ Thumbs.db
 # --------
 *.dll
 *.exe
+iDom_server-CMAKE
 
