powiadomienia o swiatlach na viber - tymczasowo

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -68,6 +68,8 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/command/commandClass/command_gateway.cpp"
     "../../src/command/commandClass/TEST/command_gateway_bt.cpp"
     "../../src/command/commandClass/TEST/command_wifi_bt.cpp"
+    "../../src/command/commandClass/command_light.cpp"
+    "../../src/command/commandClass/TEST/command_light_BT.cpp"
     "../../src/command/commandClass/command_buderus.cpp"
     "../../src/c_connection/c_connection_node.cpp"
     "../../src/c_connection/c_connection2.cpp"
