--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -93,6 +93,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/buderus/buderus.cpp"
     "../../src/TASKER/tasker.cpp"
     "../../src/BIT_TEST/bit_main.cpp"
+    "../../src/home_lighting/TEST/house_lighting_handler_stub.h"
     )
 # Get the current working branch
 execute_process(
