--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -113,6 +113,8 @@ set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 file(GLOB SOURCE_FILES2 "../../src/command/*.cpp"
     "../../src/command/commandClass/TEST/*.cpp"
     "../../src/command/commandClass/*.cpp"
-    "../../src/command/test/*.cpp")
+    "../../src/command/test/*.cpp"
+    "../../src/MENU/*.cpp"
+    "../../src/MENU/TEST/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES} ${SOURCE_FILES2})
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  pthread gtest curl rt pthread )
