dodano do cmake

--- a/iDom_server_OOP/cmake/iDom_server-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/cmake/iDom_server-CMAKE/CMakeLists.txt
@@ -96,6 +96,8 @@ set(SOURCE_FILES
     "../../src/HOUSE/house_room_handler.cpp"
     "../../src/HOUSE/light_bulb.cpp"
     "../../src/HOUSE/room.cpp"
+    "../../src/SATEL_INTEGRA/satel_integra.cpp"
+    "../../src/SATEL_INTEGRA/satel_integra_handler.cpp"
     )
 # Get the current working branch
 execute_process(
