zmiana stanu zarowki tylko po odbiorze komunikatu mqtt

--- a/iDom_server_OOP/arduino/arduino-multi-relay2-own/platformio.ini
+++ b/iDom_server_OOP/arduino/arduino-multi-relay2-own/platformio.ini
@@ -22,7 +22,7 @@ build_flags =
 ;    -D DEBUG_COMMUNICATION
 ;    -D DEBUG_ACTION
 ;    -D DEBUG_STARTUP
-;    -D IGNORE_BUTTONS_START_MS=2000
+    -D IGNORE_BUTTONS_START_MS=2000
 ;    -D EXPANDER_PCF8574
     -D EXPANDER_MCP23017
 
