lock unlock domu polaczony  z uzbrajaniem alarmu

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -91,6 +91,7 @@ set(SOURCE_FILES  "main.cpp"
     "../../src/SATEL_INTEGRA/satel_integra.cpp"
     "../../src/SATEL_INTEGRA/BT/test.cpp"
     "../../src/SATEL_INTEGRA/satel_integra_handler.cpp"
+    "../../src/SATEL_INTEGRA/BT/satel_integra_stub.cpp"
     )
 # Get the current working branch
 execute_process(
