dodanie bufora z ostatnio katywnymi czujkami satel

--- a/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/test/iDom_TESTs-CMAKE/CMakeLists.txt
@@ -30,6 +30,9 @@ set(SOURCE_FILES  "main.cpp"
     "../../libs/generator/TEST/generator_BT.cpp"
     "../../libs/alarm/alarm.cpp"
     "../../libs/alarm/TEST/alarm_BT.cpp"
+    "../../libs/circular_buffer/circular_buffer.h"
+    "../../libs/circular_buffer/circular_buffer.cpp"
+    "../../libs/circular_buffer/test/BT.cpp"
     "../../src/RADIO_433_eq/test/radio_433_test.cpp"
     "../../src/RADIO_433_eq/radio_button.cpp"
     "../../src/RADIO_433_eq/radio_433_eq.cpp"
