--- a/iDom_server_OOP/cmake/iDom_server-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/cmake/iDom_server-CMAKE/CMakeLists.txt
@@ -88,6 +88,7 @@ set(SOURCE_FILES
     "../../src/command/commandClass/command_wifi.h"
     "../../libs/alarm/alarm.cpp"
     "../../libs/generator/generator.cpp"
+    "../../libs/circular_buffer/circular_buffer.cpp"
     "../../src/iDomKEY_ACCESS/idomkey_access.cpp"
     "../../src/command/commandhandlergateway.cpp"
     "../../src/command/commandClass/command_gateway.cpp"
