--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "iDom_server_OOP/mqtt_mosquitto"]
 	path = iDom_server_OOP/mqtt_mosquitto
 	url = https://github.com/cyniu88/mqtt_mosquitto.git
+[submodule "iDom_server_OOP/Arduino-iDom"]
+	path = iDom_server_OOP/Arduino-iDom
+	url = https://github.com/cyniu88/Arduino-iDom.git
