--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 aliases:
-  - &docker_image ubuntu:bionic
+  - &docker_image ubuntu:jammy
   - &install_common |
       apt-get update -qq
       apt-get install -qq software-properties-common
@@ -14,13 +14,12 @@ jobs:
     steps:
       - run: *install_common
       - run: |
-          apt-get install -qq clang-7.0 sudo
+          apt-get install -qq clang sudo
       - checkout
       - run: |
           ls /usr/bin
-          clang-7.0 --version
-          sudo ln /usr/bin/clang++-7.0 /usr/bin/clang++
-          sudo ln /usr/bin/clang-7.0 /usr/bin/clang
+          clang --version
+         
       - run:
           name: Install CMAKE GIT and libs
           command: 'apt-get update && sudo apt-get install -y cmake git libmpd-dev curl libcurl4-openssl-dev libmpdclient-dev libgtest-dev google-mock libmosquitto-dev'
