--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs:
                    cd /usr/src/gmock
                    sudo cmake CMakeLists.txt
                    sudo make
-                   sudo cp *.a /usr/lib
+                   #sudo cp *.a /usr/lib
       - run:
           name: submodule init && update
           command: |
