--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,13 +29,12 @@ jobs:
                    cd /usr/src/gtest
                    sudo cmake CMakeLists.txt
                    sudo make
-                   sudo make install
-                   #sudo cp *.a /usr/lib
+                   sudo cp lib/*.a /usr/lib
                    cd /usr/src/gmock
                    sudo cmake CMakeLists.txt
                    sudo make    
                    sudo make install
-                   #sudo cp *.a /usr/lib
+                   sudo cp lib/*.a /usr/lib
       - run:
           name: submodule init && update
           command: |
