--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -97,5 +97,5 @@ jobs:
                  cd iDom_server_OOP/test/iDom_TESTs-CMAKE/
                  pwd
                  ls
-                 llvm-profdata-6.0  merge -o test.profdata default.profraw
-                 llvm-cov-6.0 report ./iDom_TESTs-CMAKE -instr-profile=test.profdata -use-color
+                 llvm-profdata  merge -o test.profdata default.profraw
+                 llvm-cov report ./iDom_TESTs-CMAKE -instr-profile=test.profdata -use-color
