--- a/iDom_server_OOP/cmake/iDom_server-CMAKE/CMakeLists.txt
+++ b/iDom_server_OOP/cmake/iDom_server-CMAKE/CMakeLists.txt
@@ -99,6 +99,7 @@ set(SOURCE_FILES
     "../../src/HOUSE/room.cpp"
     "../../src/SATEL_INTEGRA/satel_integra.cpp"
     "../../src/SATEL_INTEGRA/satel_integra_handler.cpp"
+    "../../src/HTTP/http.cpp"
     )
 # Get the current working branch
 execute_process(
