--- a/iDom_server_OOP/CMakeLists.txt
+++ b/iDom_server_OOP/CMakeLists.txt
@@ -11,97 +11,96 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 include_directories(${INCLUDE_DIRECTORIES})
 
 set(LIBS_SRC
-    "libs/event_counters/event/event_unknown.cpp"
-    "libs/event_counters/event/new_connect_event.cpp"
-    "libs/event_counters/event_counters_handler.cpp"
-    "libs/event_counters/event_counters.cpp"
-    "libs/event_counters/event/event_mpd.cpp"
-    "libs/event_counters/event/event_pilot.cpp"
-    "libs/event_counters/event/event_command.cpp"
-    "libs/alarm/alarm.cpp"
-    "libs/generator/generator.cpp"
-    "libs/circular_buffer/circular_buffer.cpp"
-    "libs/viberAPI/viber_api.cpp"
-    "libs/facebookAPI/facebookAPI.cpp"
-    "libs/useful/usefull.cpp"
-    "libs/sunrise-sunset/sunriseset.cpp"
-    "libs/config_parser/parser.cpp"
-    "libs/emoji/emoji.cpp"
+"libs/alarm/alarm.cpp"
+"libs/circular_buffer/circular_buffer.cpp"
+"libs/config_parser/parser.cpp"
+"libs/emoji/emoji.cpp"
+"libs/event_counters/event/event_command.cpp"
+"libs/event_counters/event/event_mpd.cpp"
+"libs/event_counters/event/event_pilot.cpp"
+"libs/event_counters/event/event_unknown.cpp"
+"libs/event_counters/event/new_connect_event.cpp"
+"libs/event_counters/event_counters.cpp"
+"libs/event_counters/event_counters_handler.cpp"
+"libs/facebookAPI/facebookAPI.cpp"
+"libs/generator/generator.cpp"
+"libs/sunrise-sunset/sunriseset.cpp"
+"libs/useful/usefull.cpp"
+"libs/viberAPI/viber_api.cpp"
 )
 set(SOURCE_FILES
-    "src/main.cpp"
-    "src/iDom_server_OOP.cpp"
-    "src/c_connection/c_connection.cpp"
-    "src/functions/functions.cpp"
-    "src/c_connection/c_connection2.cpp"
-    "src/c_connection/c_connection_node.cpp"
-    "src/logger/logger.cc"
-    "src/functions/mpd_cli.cpp"
-    "src/blockQueue/blockqueue.cpp"
-    "src/LCD_c/lcd_c.cpp"
-    "src/CRON/cron.cpp"
-    "src/command/command.cpp"
-    "src/command/commandClass/commandexit.cpp"
-    "src/command/commandClass/commandtest.cpp"
-    "src/command/commandhandler.cpp"
-    "src/command/commandClass/command_mpd.cpp"
-    "src/command/commandClass/commandrs232.cpp"
-    "src/command/commandClass/command_uptime.cpp"
-    "src/command/commandClass/command_big.cpp"
-    "src/command/commandClass/command_clock.cpp"
-    "src/command/commandClass/command_cmd.cpp"
-    "src/command/commandClass/command_hello.cpp"
-    "src/command/commandClass/command_help.cpp"
-    "src/command/commandClass/command_ip.cpp"
-    "src/command/commandClass/command_ok.cpp"
-    "src/command/commandClass/command_program.cpp"
-    "src/command/commandClass/command_put.cpp"
-    "src/command/commandClass/command_show.cpp"
-    "src/command/commandClass/command_shed.cpp"
-    "src/command/commandClass/command_sleep.cpp"
-    "src/command/commandClass/command_light.cpp"
-    "src/command/commandClass/command_event.cpp"
-    "src/iDomTools/idomtools.cpp"
-    "src/command/commandClass/command_idom.cpp"
-    "src/iDomTools/idomtools_mpd.cpp"
-    "src/command/commandhandlerroot.cpp"
-    "src/command/commandClass/command_log.cpp"
-    "src/TASKER/tasker.cpp"
-    "src/command/commandhandlerrs232.cpp"
-    "src/iDomStatus/idomstatus.cpp"
-    "src/command/commandClass/command_state.cpp"
-    "src/THERMOMETER_CONTAINER/thermometer_container.cpp"
-    "ftplibpp/ftplib.cpp"
-    "src/433MHz/rc_433mhz.cpp"
-    "src/RADIO_433_eq/radio_433_eq.cpp"
-    "src/command/commandClass/command_433mhz.cpp"
-    "src/command/commandClass/command_ardu.cpp"
-    "src/RADIO_433_eq/radio_button.cpp"
-    "src/functions/functions2.cpp"
-    "src/433MHz/RFLink/rflinkhandler.cpp"
-    "src/iDomSaveState/idom_save_state.cpp"
-    "src/iDomTools/idomtools_system.cpp"
-    "src/SerialPi/serialpi.cpp"
-    "arduPi/arduPi_template.cpp"
-    "arduPi/arduPi.cpp"
-    "src/thread_functions/iDom_thread.cpp"
-    "src/thread_functions/rs232_thread.h"
-    "liquidcrystal_i2c-for-ardupi/LiquidCrystal_I2C.cpp"
-    "mqtt_mosquitto/MQTT_mosquitto/mqtt.cpp"
-    "src/command/commandhandlermqtt.cpp"
-    "src/command/commandClass/command_wifi.cpp"
-    "src/command/commandClass/command_wifi.h"
-    "src/iDomKEY_ACCESS/idomkey_access.cpp"
-    "src/command/commandhandlergateway.cpp"
-    "src/command/commandClass/command_gateway.cpp"
-    "src/command/commandClass/command_buderus.cpp"
-    "src/buderus/buderus.cpp"
-    "src/HOUSE/house_room_handler.cpp"
-    "src/HOUSE/light_bulb.cpp"
-    "src/HOUSE/room.cpp"
-    "src/SATEL_INTEGRA/satel_integra.cpp"
-    "src/SATEL_INTEGRA/satel_integra_handler.cpp"
-    "src/HTTP/http.cpp"
+"ardupi/ardupi.cpp"
+"ardupi/ardupi_template.cpp"
+"ftplibpp/ftplib.cpp"
+"liquidcrystal_i2c-for-ardupi/liquidcrystal_i2c.cpp"
+"mqtt_mosquitto/mqtt_mosquitto/mqtt.cpp"
+"src/433mhz/rc_433mhz.cpp"
+"src/433mhz/rflink/rflinkhandler.cpp"
+"src/blockqueue/blockqueue.cpp"
+"src/buderus/buderus.cpp"
+"src/c_connection/c_connection.cpp"
+"src/c_connection/c_connection2.cpp"
+"src/c_connection/c_connection_node.cpp"
+"src/command/command.cpp"
+"src/command/commandclass/command_433mhz.cpp"
+"src/command/commandclass/command_ardu.cpp"
+"src/command/commandclass/command_big.cpp"
+"src/command/commandclass/command_buderus.cpp"
+"src/command/commandclass/command_clock.cpp"
+"src/command/commandclass/command_cmd.cpp"
+"src/command/commandclass/command_event.cpp"
+"src/command/commandclass/command_gateway.cpp"
+"src/command/commandclass/command_hello.cpp"
+"src/command/commandclass/command_help.cpp"
+"src/command/commandclass/command_idom.cpp"
+"src/command/commandclass/command_ip.cpp"
+"src/command/commandclass/command_light.cpp"
+"src/command/commandclass/command_log.cpp"
+"src/command/commandclass/command_mpd.cpp"
+"src/command/commandclass/command_ok.cpp"
+"src/command/commandclass/command_program.cpp"
+"src/command/commandclass/command_put.cpp"
+"src/command/commandclass/command_shed.cpp"
+"src/command/commandclass/command_show.cpp"
+"src/command/commandclass/command_sleep.cpp"
+"src/command/commandclass/command_state.cpp"
+"src/command/commandclass/command_uptime.cpp"
+"src/command/commandclass/command_wifi.cpp"
+"src/command/commandclass/command_wifi.h"
+"src/command/commandclass/commandexit.cpp"
+"src/command/commandclass/commandrs232.cpp"
+"src/command/commandclass/commandtest.cpp"
+"src/command/commandhandler.cpp"
+"src/command/commandhandlergateway.cpp"
+"src/command/commandhandlermqtt.cpp"
+"src/command/commandhandlerroot.cpp"
+"src/command/commandhandlerrs232.cpp"
+"src/cron/cron.cpp"
+"src/functions/functions.cpp"
+"src/functions/functions2.cpp"
+"src/functions/mpd_cli.cpp"
+"src/house/house_room_handler.cpp"
+"src/house/light_bulb.cpp"
+"src/house/room.cpp"
+"src/http/http.cpp" "src/idom_server_oop.cpp"
+"src/idomkey_access/idomkey_access.cpp"
+"src/idomsavestate/idom_save_state.cpp"
+"src/idomstatus/idomstatus.cpp"
+"src/idomtools/idomtools.cpp"
+"src/idomtools/idomtools_mpd.cpp"
+"src/idomtools/idomtools_system.cpp"
+"src/lcd_c/lcd_c.cpp"
+"src/logger/logger.cc"
+"src/main.cpp"
+"src/radio_433_eq/radio_433_eq.cpp"
+"src/radio_433_eq/radio_button.cpp"
+"src/satel_integra/satel_integra.cpp"
+"src/satel_integra/satel_integra_handler.cpp"
+"src/serialpi/serialpi.cpp"
+"src/tasker/tasker.cpp"
+"src/thermometer_container/thermometer_container.cpp"
+"src/thread_functions/idom_thread.cpp"
+"src/thread_functions/rs232_thread.h"
     )
 # Get the current working branch
 execute_process(
