--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,15 +67,8 @@ jobs:
           name: runt
           command: './koko/koko'
       - run:
-          name: Build release
-          command: |
-                   'pwd'
-                   'ls'
-                   'cd iDom_server_OOP'
-                   'cmake .'
-                   'ls'
-                   'make -j2'
-                   'cd'
+          name: Create Build Files RELEASE
+          command: "cmake -BiDom_server_OOP/ -HiDom_server_OOP/'
       - run:
           name: Creating Build Files
           command: 'cmake -BiDom_server_OOP/test/iDom_TESTs-CMAKE/ -HiDom_server_OOP/test/iDom_TESTs-CMAKE/'
