--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,13 +70,16 @@ jobs:
           name: Create Build Files RELEASE
           command: 'cmake -BiDom_server_OOP/ -HiDom_server_OOP/'
       - run:
-          name: Creating Build Files
+          name: Creating Binary Files Test
+          command: 'make -j2 -C iDom_server_OOP/'
+      - run:
+          name: Creating Build Files TEST
           command: 'cmake -BiDom_server_OOP/test/iDom_TESTs-CMAKE/ -HiDom_server_OOP/test/iDom_TESTs-CMAKE/'
       - run:
           name: ls
           command: 'ls iDom_server_OOP/test/iDom_TESTs-CMAKE/'
       - run:
-          name: Creating Binary Files
+          name: Creating Binary Files Test
           command: 'make -j2 -C iDom_server_OOP/test/iDom_TESTs-CMAKE/'
       - run:
           name: ls
