--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 aliases:
-  - &docker_image ubuntu:jammy
+  - &docker_image ubuntu:latest
   - &install_common |
       apt-get update -qq
       apt-get install -qq software-properties-common
