--- a/koko/CMakeLists.txt
+++ b/koko/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20 -DBT_TEST -DNOSSL -O3")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2b -DBT_TEST -DNOSSL -O3")
 set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
 
 project(koko)
