db client  fabryka

--- a/iDom_server_OOP/docker/CMakeLists.txt
+++ b/iDom_server_OOP/docker/CMakeLists.txt
@@ -102,6 +102,8 @@ set(SOURCE_FILES
     "../src/THERMOMETER_CONTAINER/thermometer_container.cpp"
     "../src/thread_functions/iDom_thread.cpp"
     "../src/thread_functions/rs232_thread.h"
+    "../src/dbClient/db-client.cpp"
+    "../src/dbClient/db-client-factory.cpp"
     )
 # Get the current working branch
 execute_process(
