--- a/iDom_server_OOP/docker/CMakeLists.txt
+++ b/iDom_server_OOP/docker/CMakeLists.txt
@@ -132,4 +132,4 @@ file(GLOB SOURCE_FILES2 "../src/command/*.*"
     "../src/command/commandClass/*.*"
     "../src/MENU/*.*")
 add_executable(${PROJECT_NAME} ${LIBS_SRC} ${SOURCE_FILES} ${SOURCE_FILES2})
-TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  wiringPiDev wiringPi rt pthread curl mpd mosquitto i2c )
+TARGET_LINK_LIBRARIES( ${PROJECT_NAME}  rt pthread curl mpd mosquitto i2c )
